# exoanalysis

./: .gitignore  analyze_spec.py  build_full_spec_resampled.py  file_tree_h5.py  fit_E250_principal.ipynb  fits.txt  gevp_spec.py  meson_spec.ipynb  pyproject.toml  stage2.5_avg_notinuse.py  stage3_fit.py  stage3_gevp.py  stage3_io.py  stage3_runner.py
corrfit/: __init__.py  __main__.py  gevp_nolan.py  io.py  plot.py  svdcut.py  utils.py
corrfit-stage3/: stage3.md  stage3_io.py  stage3_resample.py
corrfit/base/: __init__.py  fit_args.py  fit_manager.py  fitter.py  fitters_dict.py  gevp.py  resample.py
corrfit/blossier/: __init__.py  fit_args.py  fit_manager.py  fitter.py  fitters_dict.py  gevp.py  models.py  resample.py
corrfit/constant/: __init__.py  fit_args.py  fit_manager.py  fitter.py  fitters_dict.py  models.py
corrfit/two_pt/: __init__.py  fit_args.py  fit_manager.py  fitter.py  fitters_dict.py  gevp.py  models.py  resample.py
stage2-matrix-assembly/: README.md  checkmat.py  meson_spec.ipynb  run_stage2.py  single_meson_cij.py  stage2.5_avg.py  stage2_build_corrmat.py
