[tool.poetry]
name = "dpi-analysis"
version = "0.1.0"
description = ""
authors = ["gdbrad <gdb2@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.2"
gvar = "^13.1.9"
lsqfit = "^13.3.1"
h5py = "^3.15.1"
scipy = "^1.17.0"
pyyaml = "^6.0.3"
tqdm = "^4.67.3"
multiprocess = "^0.70.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
